--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,6 @@ navigation:
  - title: Home
    url: /index.html
  - title: About
-   url: /about
+   url: /about.html
  - title: Contact
-   url: /contact
+   url: /contact.html
